# nonebot-plugin-kuwo

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
nonebot_plugin_kuwo/: __init__.py  _qmc_rs.pyi  config.py  data_source.py  models.py  qmc.py  render.py  utils.py
src/: lib.rs  qmc.rs
tests/: AIM0000WoYYr0hishZ3b6ff42855ecade7711348a59f29bca0.mflac  conftest.py  test_command.py  test_config.py  test_data_source.py  test_qmc.py  test_utils.py
