[project]
name = "nonebot-plugin-kuwo"
version = "0.2.2"
description = "NoneBot2 plugin for Kuwo music search and track delivery."
readme = "README.md"
authors = [{ name = "006lp", email = "lpsuki@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-htmlrender>=0.7.0a3",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot2>=2.5.0,<3.0.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.0,<1.0.0",
    "maturin>=1.13.1",
    "nonebug>=0.4.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.0",
    "ruff>=0.15.9",
    "uvicorn>=0.35.0,<1.0.0",
]

[build-system]
requires = ["maturin>=1.13.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "nonebot_plugin_kuwo._qmc_rs"
python-packages = ["nonebot_plugin_kuwo"]
python-source = "."
strip = true

[project.urls]
Homepage = "https://github.com/006lp/nonebot-plugin-kuwo"
Issues = "https://github.com/006lp/nonebot-plugin-kuwo/issues"
Repository = "https://github.com/006lp/nonebot-plugin-kuwo.git"

[tool.nonebot.plugins]
nonebot-plugin-kuwo = ["nonebot_plugin_kuwo"]
